Replace deprecated method calls to newInstance and IoSession.close()